# formalize-thoughts

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  script.js  style.css
configs/: causality_eval.yaml  dcs_eval.yaml  disc_data.yaml  disc_index.yaml  disc_train.yaml  llm_data.yaml  llm_data_70b.yaml  llm_data_deepseek_r1_32b.yaml  llm_data_gpt_oss_20b.yaml  llm_data_skywork_or1_32b.yaml  minimality_train.yaml  minimality_train_output.yaml  minimality_train_xgy.yaml  minimality_train_xgyt.yaml
configs/discriminator/: default.yaml
configs/embedder/: nemotron_8b.yaml
configs/loader/: bbeh.yaml  dev.yaml
configs/logging/: debug.yaml  default.yaml
configs/model/: deepseek_r1_32b.yaml  gpt_oss_20b.yaml  llama_70b.yaml  llama_8b.yaml  skywork_or1_32b.yaml
scripts/: causality_eval.py  dcs_d_eval.py  dcs_eval.py  disc_data.py  disc_index.py  disc_trainer.py  llm_data.py  minimality_samples.py  minimality_trainer.py
scripts/download/: download_bbeh.py
src/: __init__.py
src/dataset/: base.py  bbeh_loader.py  curator.py  disc_dataset.py  disc_loader.py  minimality_dataset.py  tr_loader.py
src/model/: __init__.py  base.py  discriminator.py  embedder.py  factory.py  llm.py  minimality_probe.py
src/utils/: __init__.py  bbeh_eval.py  config.py  logging.py
tests/: test_causality_eval.py  test_curator_two_pass.py  test_disc_dataset.py  test_discriminator.py  test_llm_two_pass.py  test_minimality.py  test_phase2.py  test_tr_loader.py
