[project]
name = "formalizing-latent-thoughts"
version = "1.0.0"
description = "Official implementation of 'Formalizing Latent Thoughts: Four Axioms of Thought Representation in LLMs'"
authors = [
    { name = "Fahd Seddik" },
    { name = "Fatemeh Fard" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "transformers>=4.57.3,<5.0.0",
    "vllm==0.19.0",
    "hydra-core>=1.3.2",
    "datasets>=4.4.1",
    "zstandard>=0.25.0",
    "dotenv>=0.9.9",
    "rich>=14.2.0",
    "wandb>=0.23.0",
    "matplotlib>=3.10.7",
    "kneed>=0.8.5",
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "pytest>=9.0.2",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "nltk>=3.9.2",
    "evaluate>=0.4.6",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "kernels>=0.12.3",
    "torch==2.10.0+cu126",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true  # Only use this index for packages explicitly pinned to it

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.pytest.ini_options]
# Hydra's pytest plugin adds ~18s overhead per test (Hydra config init per fixture).
# Our unit tests don't use Hydra — disable the plugin globally.
addopts = "-p no:hydra"
